# resonance

./: Cargo.toml  README.md  TEST_AUDIO_MODE.md  config.toml  project_plan.md
.cursor/rules/: project-plan.mdc
app_cli/: Cargo.toml
app_cli/src/: main.rs  network_adapter.rs
app_cli/src/tests/: integration_tests.rs  mod.rs  unit_tests.rs
audio/: Cargo.toml
audio/src/: lib.rs
audio_io/: Cargo.toml
audio_io/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/x25519_example/: Cargo.toml
docs/: implementation_plan.md  project_architecture.md  project_plan.md
network/: Cargo.toml
network/src/: events.rs  lib.rs  phase1.rs  protocol.rs  stun_client.rs  webrtc_audio.rs  webrtc_if.rs
network/src/tests/: phase1_test.rs  webrtc_tests.rs
room/: Cargo.toml
room/src/: commands.rs  handler.rs  lib.rs
room_core/: Cargo.toml
room_core/src/: events.rs  lib.rs
settings_manager/: Cargo.toml
settings_manager/src/: lib.rs
spatial/: Cargo.toml
spatial/src/: lib.rs
src/: lib.rs  main.rs
src/app/: config.rs  mod.rs  session.rs  test_session.rs
src/audio/: capture.rs  mod.rs  spatial.rs  streams.rs  voice.rs
src/network/: connection_manager.rs  mod.rs  p2p.rs  secure_channel.rs  security.rs  signaling.rs  webrtc.rs
src/ui/: commands.rs  mod.rs  qr_code.rs  settings.rs  terminal_ui.rs  tui.rs
src/ui/widgets/: audio_visualization.rs  mod.rs  participant_list.rs  spectrogram.rs  virtual_room.rs
tests/: multi_instance_audio_test.rs  session_integration_test.rs
visualization/: Cargo.toml
visualization/src/: lib.rs
