[package]
name = "resonance"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
cpal = "0.15"
webrtc-audio-processing = { version = "0.4", features = [
    "bundled",
    "derive_serde",
] }
ratatui = "0.24"
crossterm = "0.27"
ringbuf = "0.3"
webrtc = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dependencies.steam-audio]
package = "steam-audio-sys"
version = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
test-log = "0.2"
env_logger = "0.10"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"
