[package]
name = "resonance"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
cpal = "0.15"
webrtc-audio-processing = { version = "0.4", features = [
    "bundled",
    "derive_serde",
] }
ratatui = "0.24"
crossterm = "0.27"
ringbuf = "0.3"
webrtc = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
audionimbus = "0.3.0"
thiserror = "1.0"
async-trait = "0.1"
clipboard = "0.5"

# Added for P2P networking
qrcode = "0.12"
base64 = "0.13"
chacha20poly1305 = "0.10"
bincode = "1.3"
rand = "0.8"
x25519-dalek = "2.0"
rustfft = "6.2.0"
symphonia = { version = "0.5.4", features = ["all", "mp3"] }

[dependencies.steam-audio]
package = "steam-audio-sys"
version = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
test-log = "0.2"
env_logger = "0.10"
