[workspace]
resolver = "2"
members = [
    "app_cli",
    "room_core",
    "audio",
    "audio_io",
    "spatial",
    "network",
    "crypto",
    "room",
    "visualization",
    "settings_manager",
]

[workspace.dependencies]
# Common dependencies can be defined here
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
log = "0.4"
anyhow = "1"
bytes = "1"                                      # Often useful for network/serialization related types

# Dev dependencies
tokio-test = "0.4"
mockall = "0.11"
test-log = { version = "0.2", features = [
    "log",
] } # Ensure 'log' feature is enabled if using with log facade
env_logger = "0.10"
