[package]
name = "app_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
dirs = "5.0"
env_logger = "0.10"
log = "0.4"
ratatui = "0.24"
room_core = { path = "../room_core" }
settings_manager = { path = "../settings_manager" }
tokio = { version = "1.35", features = ["full"] }
room = { path = "../room" }
network = { path = "../network" }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.11"

[features]
# Enable this feature for tests that need to mock the NetworkAdapter
test_utils = []
