[package]
name = "app_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
crossterm = { version = "0.27", features = ["serde"] }
dirs = "5.0"
env_logger = { workspace = true }
log = { workspace = true }
ratatui = { version = "0.26", features = ["crossterm", "serde"] }
room_core = { path = "../room_core" }
settings_manager = { path = "../settings_manager" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
room = { path = "../room" }
network = { path = "../network" }
uuid = { version = "1.6", features = ["v4", "serde"] }
audio = { path = "../audio" }
audio_io = { path = "../audio_io" }
arboard = "3"

[dev-dependencies]
mockall = "0.11"
test-log = { workspace = true }

[features]
# Enable this feature for tests that need to mock the NetworkAdapter
test_utils = []
