[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
room_core = { path = "../room_core" }
tokio = { workspace = true }          # For async traits if needed, unlikely
log = { workspace = true }
serde = { workspace = true }          # Keys might be serializable
rand = "0.8"                          # For key generation
bytes = { workspace = true }          # Crypto operations often use byte slices
x25519-dalek = "2.0"                  # For Diffie-Hellman key exchange
sha2 = "0.10"                         # SHA-256 for HMAC
hmac = "0.12"                         # HMAC implementation
hkdf = "0.12"                         # Key derivation function
chacha20poly1305 = "0.10"             # AEAD encryption
thiserror = "1.0"                     # For error enums

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
test-log = { workspace = true }
hex-literal = "0.4"
