[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
room_core = { path = "../room_core" }
crypto = { path = "../crypto" }
settings_manager = { path = "../settings_manager" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Added from original root Cargo.toml
webrtc = "0.8" # Updated from 0.7, removed unsupported serde feature
webrtc-audio-processing = { version = "0.4", features = [
    "bundled",
    "derive_serde",
] } # Added from original root Cargo.toml
log = "0.4"
anyhow = { workspace = true }
bincode = "1.3" # Likely needed for protocol serialization
bytes = { workspace = true } # Often needed with networking
rand = "0.8" # Needed for things like random nonces
x25519-dalek = "2.0"
thiserror = "1.0"

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
test-log = { workspace = true }
env_logger = "0.11"
