[package]
name = "room"
version = "0.1.0"
edition = "2021"

[dependencies]
room_core = { path = "../room_core" }
tokio = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
test-log = { workspace = true }
