[package]
name = "room"
version = "0.1.0"
edition = "2021"

[dependencies]
room_core = { path = "../room_core" }
log = "0.4"
tokio = { version = "1.35", features = ["full", "sync"] }
network = { path = "../network" }
serde = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
test-log = { workspace = true }
