[package]
name = "settings_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
room_core = { path = "../room_core" }
serde = { workspace = true }
tokio = { workspace = true } # May not be strictly needed here
log = { workspace = true }
anyhow = { workspace = true }
config = { version = "0.14", features = [
    "toml",
] } # Added for config file handling
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tokio-test = { workspace = true }
test-log = { workspace = true }
tempfile = "3.8"
