[package]
name = "visualization"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
tokio = { workspace = true }
log = { workspace = true }
rustfft = "6.1"              # Added for FFT from plan

[dev-dependencies]
tokio-test = { workspace = true }
test-log = { workspace = true }
